# openvpn3

./: vcpkg.json
.github/workflows/: msbuild.yml
client/: CMakeLists.txt  ovpncli.cpp  ovpncli.hpp  ovpncli.i
openvpn/client/: cliconnect.hpp  cliopt.hpp
openvpn/common/: bigmutex.hpp  platform.hpp  string.hpp
openvpn/crypto/: packet_id.hpp
openvpn/error/: error.hpp
openvpn/mbedtls/crypto/: cipheraead.hpp
openvpn/openssl/pki/: extpki.hpp
openvpn/openssl/ssl/: sslctx.hpp
openvpn/openssl/xkey/: xkey_common.h
openvpn/options/: merge.hpp
openvpn/plugin/darwin/: ck-ovpn-plugin.a.sha256
openvpn/plugin/linux/: ck-ovpn-plugin.a.sha256
openvpn/plugin/windows/: ck-ovpn-plugin.h  ck-ovpn-plugin.h.sha256  ck-ovpn-plugin.lib
openvpn/reliable/: relcommon.hpp  relrecv.hpp  relsend.hpp
openvpn/server/: servproto.hpp
openvpn/ssl/: proto.hpp  protostack.hpp  psid.hpp  psid_cookie.hpp  psid_cookie_impl.hpp
openvpn/test/: namespace.hpp
openvpn/transport/: ptlink.hpp
openvpn/transport/client/: transbase.hpp
openvpn/transport/client/pluggable/: ck-ovpn-plugin.h  fw.hpp  pt.hpp  ptcli.hpp
openvpn/transport/server/: transbase.hpp
test/ovpncli/: CMakeLists.txt
test/unittests/: CMakeLists.txt  test_psid_cookie.cpp
